Fixed a text-overflow problem.

--- a/tpl/themes/default/style.css
+++ b/tpl/themes/default/style.css
@@ -353,7 +353,6 @@ td.avatar_mini {
 	font-size: 14px;
 	line-height: 180%;
 	color: #000;
-	text-overflow: ellipsis;
 	overflow:hidden;
 	word-break: break-word;
 }
