--- a/tpl/themes/fluid/style.css
+++ b/tpl/themes/fluid/style.css
@@ -303,7 +303,6 @@ td.avatar_mini {
 	font-size: 14px;
 	line-height: 180%;
 	color: #000;
-	text-overflow: ellipsis;
 	overflow:hidden;
 }
 
